# co4

./: .gitignore  CO4.hs  CO4Debug.hs  JFP_Ex31.proof  Main.hs  README  README.md  co4.cabal  stack.yaml  z001.m4-i16.out
CO4/: AdtIndex.hs  Allocator.hs  AllocatorData.hs  Backend.hs  Cache.hs  CodeGen.hs  Compilation.hs  Config.hs  EncEq.hs  Encodeable.hs  EncodedAdt.hs  EncodedAdt.hs-boot  EncodedAdtData.hs  Frontend.hs  Language.hs  Monad.hs  MonadifyTypes.hs  Names.hs  PPrint.hs  Prefixfree.hs  Prelude.hs  PreludeBool.hs  PreludeNat.hs  Profiling.hs  Solve.hs  Stack.hs  THUtil.hs  Test.hs  TypesUtil.hs  Unique.hs  UnknownAdt.hs  Util.hs
CO4/Algorithms/: Bound.hs  Collapse.hs  Collector.hs  Eitherize.hs  EtaExpansion.hs  ExtendLambda.hs  Free.hs  Globalize.hs  HigherOrderInstantiation.hs  HindleyMilner.hs  Instantiation.hs  Instantiator.hs  Monadify.hs  PolymorphicInstantiation.hs  Rename.hs  Replace.hs  SaturateApplication.hs  THInstantiator.hs  TopologicalSort.hs  TypedNames.hs  UniqueNames.hs  Util.hs
CO4/Algorithms/Eitherize/: DecodeInstance.hs  DecodedAdtTypeFamily.hs  EncEqInstance.hs  EncodeableInstance.hs  IndexedGadt.hs  IndexedGadtInstance.hs  IndexedInstance.hs  Names.hs  Naturals.hs  SizeOfGadtInstance.hs  SizedGadt.hs  Solve.hs  UnknownGadtInstance.hs  UnsizedAdt.hs  UnsizedAdtInstance.hs  Util.hs
CO4/Algorithms/HindleyMilner/: Prelude.hs  Util.hs  W.hs
CO4/Allocator/: Combine.hs  Common.hs  Overlapping.hs  Overlapping2.hs  Sequential.hs
CO4/Backend/: Raml.hs  RamlPreprocess.hs  SatchmoPreprocess.hs  TH.hs
CO4/CSPlib/Prob006/: Constraint.hs  Main.hs
CO4/CSPlib/Prob019/: Constraint.hs
CO4/CSPlib/Prob049/: Constraint.hs  Main.hs
CO4/CodeGen/: DecodeInstance.hs  EncEqInstance.hs  EncodeableInstance.hs  Names.hs
CO4/EncodedAdt/: Overlapping.hs  Overlapping2.hs  Sequential.hs
CO4/Example/: Binary.hs  Binary.standalone.hs  Loop.hs  LoopSrs.hs  LoopTrsToyama.hs  LoopTrsToyama.standalone.hs  Nat.hs  Prelude.hs  Simple.hs  WCB_Matrix.hs  WCB_Matrix.standalone.hs
CO4/Example/Loop/: Standalone.hs  gebhardt-08.xml
CO4/Example/LoopSrs/: Standalone.hs  zantema_z042.xml
CO4/Examples/: Hamilton.hs
CO4/Frontend/: HaskellSrcExts.hs  String.hs  TH.hs  THCheck.hs  THPreprocess.hs
CO4/Isabelle/: Bin.hs  Bin.thy  Mul.hs  Mul.hs.original  Mul.thy
CO4/PreludeNat/: Opt.hs
CO4/Standalone/: Interpreter.hs  Main.hs  ParseArgs.hs
CO4/Test/: Artic.hs  Assert.hs  Assert.standalone.hs  Closure.hs  Closure.standalone.hs  Eitherize.hs  Eitherize2.hs  Eitherize3.hs  Embed.hs  Factor.hs  Fuzzy.hs  HindleyMilner.hs  LPO.hs  LPO.standalone.hs  List.hs  Loop.hs  Loop.standalone.hs  Loop2.hs  Matrix.hs  Maybe.hs  Nice.hs  Queens.hs  Queens.standalone.hs  RoseTree.hs  RoseTree.txt  SL.hs  SL.standalone.hs  SLPO.hs  SLPO.standalone.hs  Simple.hs  SimpleStandalone.hs  TRS_Loop.hs  TRS_Loop.standalone.hs  TRS_Loop_Toyama.hs  TRS_Loop_Toyama.standalone.hs  TermComp.hs  TermComp.standalone.hs  Termination1.hs  Transport.hs  Transport.standalone.hs  (+8 more)
CO4/Test/Costas/: Constraint.hs
CO4/Test/ICFP/Flat/: Standalone.hs
CO4/Test/ICFP/Stack/: Solve.hs
CO4/Test/ICFP/Stack2/: Standalone.hs
CO4/Test/TermComp2014/: Allocators.hs  Data.hs  Main.hs  PPrint.hs  Standalone.hs  Trs.hs  Util.hs  run.sh  z001.trs
CO4/Test/TermComp2014/LPO/: Main.hs  Standalone.hs
CO4/Test/TermComp2014/SL/: Main.hs  Standalone.hs
CP13/Mqueens/: Queens.hs  Queens.standalone.hs
cpfs/: JFP_Ex31.cpf.3  iterative_lpo.cpf
src/: CO4.hs
src/CO4/: Allocator.hs  AllocatorData.hs  CodeGen.hs  Compilation.hs  Config.hs  Encodeable.hs  EncodedAdt.hs  EncodedAdt.hs-boot  Monad.hs  Names.hs  Prefixfree.hs  Prelude.hs  PreludeBool.hs  PreludeNat.hs  Profiling.hs  Solve.hs  THUtil.hs  TypesUtil.hs  Unique.hs  Util.hs
src/CO4/Algorithms/: Bound.hs  Collector.hs  ExtendLambda.hs  Free.hs  Globalize.hs  HigherOrderInstantiation.hs  Instantiator.hs  PolymorphicInstantiation.hs  Rename.hs  Replace.hs  SaturateApplication.hs  THInstantiator.hs  UndefinedValues.hs  UniqueNames.hs  Util.hs
src/CO4/Algorithms/HindleyMilner/: Util.hs  W.hs
src/CO4/Algorithms/UndefinedValues/: Data.hs
src/CO4/Allocator/: Data.hs  Typed.hs
src/CO4/CSPlib/Prob006/: Constraint.hs  Main.hs
src/CO4/CodeGen/: DecodeInstance.hs  EncodeableInstance.hs  Names.hs  TypedAllocator.hs
src/CO4/Frontend/: HaskellSrcExts.hs  TH.hs  THCheck.hs  THPreprocess.hs
src/CO4/Isabelle/: Bool_List_Representation.hs
src/CO4/Prelude/: Bool.hs  Nat.hs
src/CO4/PreludeNat/: Opt.hs
tc/: MB.hs
tc/Compress/: Cached.hs  Common.hs  DP.hs  Paper.hs  PaperIter.hs  Simple.hs
tc/Compress/Paper/: Costs.hs  Digram.hs  Main.hs  Selection.hs  TreeRePair.hs  Weight.hs
tc/Compress/PaperIter/: Common.hs  TreeRePair.hs
tc/MB/: Arctic.hs  Count.hs  Matrix.hs  Options.hs  Pretty.hs  Proof.hs  Strategy.hs
tc/MB/Proof/: CPF.hs  Doc.hs  Type.hs
test/CO4/: Test.hs
test/CO4/Example/: Adder.hs  Binary.hs  BinaryStandalone.hs  Color.hs  Fib.hs  Hang.hs  HangStandalone.hs  LPO.hs  LPOSL.hs  LPOSLStandalone.hs  LPOStandalone.hs  LoopSrs.hs  LoopTrsToyama.hs  LoopTrsToyamaStandalone.hs  Nat.hs  Prelude.hs  QueensSelfContained.hs  Simple.hs  Sudoku.hs  SudokuStandalone.hs  Unary.hs  WCB_Matrix.hs  WCB_MatrixStandalone.hs
test/CO4/Test/: Assert.hs  Assert.standalone.hs  Complexity1.hs  Factor.hs  Factor.standalone.hs  Loop2.hs  Loop2_Main.hs  Loop_Main.hs  Merge.hs  QueenArmies.hs  Queens.curry  Queens.hs  Queens.standalone.hs  QueensBooleans.hs  RFC.hs  RFCBitfield.hs  RFCBitfieldStandalone.hs  RFCStandalone.hs  RFCStandaloneBitfield.hs  RFCSymmetricBitfield.hs  RFCSymmetricBitfieldStandalone.hs  SL.standalone.hs  SLPO.hs  SLPO.standalone.hs  T.hs  TRS_Loop.standalone.hs  Transport.hs  Transport_Main.hs  WCB.standalone.hs  WCB.testcases  WCB_Matrix.standalone.hs  WCB_Nat8.hs
test/CO4/Thesis/: Case.hs  CaseStandalone.hs  Color.hs  Fib.hs  LPO.hs  LPOBenchmark.hs  LPOSLBenchmark.hs  LPOSLStandalone.hs  LPOStandalone.hs  Loop.hs  LoopBenchmark.hs  LoopStandalone.hs  NatBinary.hs  NatBuiltIn.hs  NatUnary.hs  WCB_Matrix.hs  WCB_MatrixStandalone.hs
(+36 files in other folders)
