Name:			        co4
Version:        	0.0.58
Cabal-Version:  	>= 1.9.2
License:          GPL
License-file:     LICENSE
Build-type:       Simple
Author:         	Alexander Bau, Johannes Waldmann
Maintainer:       Alexander Bau
Synopsis:       	Complexity concerned constraint compiler
Category:         Language      
Description:      Complexity concerned constraint compiler

Library
  Exposed-Modules:    CO4
                    , CO4.AllocatorData
                    , CO4.Allocator
                    , CO4.Backend
                    , CO4.Cache
                    , CO4.Compilation
                    , CO4.Config
                    , CO4.EncEq
                    , CO4.Encodeable
                    , CO4.EncodedAdt
                    , CO4.Frontend
                    , CO4.Language
                    , CO4.Monad
                    , CO4.Names
                    , CO4.PPrint
                    , CO4.Prelude
                    , CO4.PreludeBool
                    , CO4.PreludeNat
                    , CO4.PreludeNat.Opt
                    , CO4.Profiling
                    , CO4.Stack
                    , CO4.THUtil
                    , CO4.TypesUtil
                    , CO4.Unique
                    , CO4.Util
                    , CO4.Algorithms.Bound
                    , CO4.Algorithms.Collector
                    , CO4.Algorithms.Eitherize
                    , CO4.Algorithms.EtaExpansion
                    , CO4.Algorithms.Free
                    , CO4.Algorithms.Globalize
                    , CO4.Algorithms.HindleyMilner
                    , CO4.Algorithms.Instantiation
                    , CO4.Algorithms.Instantiator
                    , CO4.Algorithms.Rename
                    , CO4.Algorithms.Replace
                    , CO4.Algorithms.SaturateApplication
                    , CO4.Algorithms.THInstantiator
                    , CO4.Algorithms.TopologicalSort
                    , CO4.Algorithms.UniqueNames
                    , CO4.Algorithms.Util
                    , CO4.Algorithms.Eitherize.DecodeInstance
                    , CO4.Algorithms.Eitherize.EncEqInstance
                    , CO4.Algorithms.Eitherize.EncodeableInstance
                    , CO4.Algorithms.Eitherize.Names
                    , CO4.Algorithms.Eitherize.Solve
                    , CO4.Algorithms.HindleyMilner.Util
                    , CO4.Algorithms.HindleyMilner.W
                    , CO4.Backend.TH
                    , CO4.Frontend.HaskellSrcExts
                    , CO4.Frontend.THCheck
                    , CO4.Frontend.TH
                    , CO4.Frontend.THPreprocess

  Ghc-options:        -W -fno-warn-incomplete-patterns
  Build-Depends:      base >= 4.2 && < 5.0
                    , template-haskell == 2.8.*
                    , containers == 0.5.*
                    , mtl == 2.1.*
                    , syb == 0.4.*
                    , pretty == 1.1.*
                    , satchmo-core == 0.6.*
                    , haskell-src-exts == 1.13.*
                    , haskell-src-exts-qq == 0.6.*
                    , haskell-src-meta == 0.6.*
                    , transformers == 0.3.*

Test-Suite test-co4
  Type:             exitcode-stdio-1.0
  Main-Is:          CO4/Test.hs
  Build-Depends:      base >= 4.2 && < 5.0
                    , template-haskell == 2.8.*
                    , containers == 0.5.*
                    , mtl == 2.1.*
                    , syb == 0.4.*
                    , pretty == 1.1.*
                    , satchmo-core == 0.6.*
                    , haskell-src-exts == 1.13.*
                    , haskell-src-exts-qq == 0.6.*
                    , haskell-src-meta == 0.6.*
                    , transformers == 0.3.*
