Name:			        co4
Version:        	0.0.80
Cabal-Version:  	>= 1.9.2
License:          GPL
License-file:     LICENSE
Build-type:       Simple
Author:         	Alexander Bau, Johannes Waldmann
Maintainer:       Alexander Bau
Synopsis:       	Complexity concerned constraint compiler
Category:         Language      
Description:      Complexity concerned constraint compiler

Library
  hs-source-dirs: src
  Exposed-Modules:    CO4
                    , CO4.Allocator
                    , CO4.Allocator.Data
                    , CO4.Allocator.Typed
                    , CO4.Cache
                    , CO4.Compilation
                    , CO4.Config
                    , CO4.Encodeable
                    , CO4.EncodedAdt
                    , CO4.Language
                    , CO4.Monad
                    , CO4.Names
                    , CO4.PPrint
                    , CO4.Prefixfree
                    , CO4.Prelude
                    , CO4.Prelude.Bool
                    , CO4.Prelude.Nat
                    , CO4.Prelude.Nat.Opt
                    , CO4.Profiling
                    , CO4.Stack
                    , CO4.THUtil
                    , CO4.TypesUtil
                    , CO4.Unique
                    , CO4.Util
                    , CO4.Algorithms.Bound
                    , CO4.Algorithms.Collector
                    , CO4.Algorithms.ExtendLambda
                    , CO4.Algorithms.Free
                    , CO4.Algorithms.Globalize
                    , CO4.Algorithms.HigherOrderInstantiation
                    , CO4.Algorithms.HindleyMilner
                    , CO4.Algorithms.Instantiator
                    , CO4.Algorithms.Rename
                    , CO4.Algorithms.Replace
                    , CO4.Algorithms.SaturateApplication
                    , CO4.Algorithms.THInstantiator
                    , CO4.Algorithms.TopologicalSort
                    , CO4.Algorithms.UniqueNames
                    , CO4.Algorithms.Util
                    , CO4.Algorithms.HindleyMilner.Util
                    , CO4.Algorithms.HindleyMilner.W
                    , CO4.Algorithms.UndefinedValues
                    , CO4.CodeGen
                    , CO4.CodeGen.DecodeInstance
                    , CO4.CodeGen.EncodeableInstance
                    , CO4.CodeGen.Names
                    , CO4.CodeGen.TypedAllocator
                    , CO4.Solve
                    , CO4.Frontend.HaskellSrcExts
                    , CO4.Frontend.THCheck
                    , CO4.Frontend.TH
                    , CO4.Frontend.THPreprocess

  Ghc-options:        -W -fno-warn-incomplete-patterns
  Build-Depends:      base
                    , template-haskell
                    , containers
                    , mtl
                    , syb
                    , pretty
                    , satchmo-core
                    , haskell-src-exts
                    , haskell-src-exts-qq
                    , haskell-src-meta
                    , transformers

Test-Suite co4-examples
  hs-source-dirs: test
  Type:               exitcode-stdio-1.0
  Main-Is:            CO4/Test.hs
  Build-Depends:      base
                    , template-haskell
                    , containers
                    , satchmo-core
                --  , tpdb
                    , co4
